# SkinCare-AI-Agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_LOG.txt  README.md  docker-compose.prod.yml  docker-compose.yml  render-env-values.txt  render.yaml  shopify.app.toml.example
backend/: .env.example  Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  chat.py  conversations.py  knowledge.py  shopify.py  web.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: init_db.py  models.py  schemas.py  session.py
backend/app/services/: agent.py  chat_learning.py  product_links.py  rag.py  shopify_client.py  shopify_oauth.py  shopify_sync.py
backend/tests/: test_agent_topic.py  test_product_links.py  test_recommendations.py
docs/: HAIR_PRODUCTS_SETUP.md  MERCHANT_ONBOARDING_KIT.md  MERCHANT_WELCOME_EMAIL.txt  SHOPIFY_STORE_OWNER_GUIDE.md  WEBSITE_INTEGRATION_GUIDE.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  package.json  tailwind.config.ts  tsconfig.json
knowledge-base/: README.txt  active-ingredients-clinical-guide.txt  glow-beauty-hair-care-import.csv  glow-beauty-products-import.csv  hair-care-guide.txt  ingredient-compatibility-guide.txt  ingredient-faq.txt  product-usage-guide.txt  return-refund-policy.txt  routine-formulas-guide.txt  shipping-policy.txt  skin-concerns-treatment-guide.txt  skin-consultation-guide.txt  skin-types-guide.txt  store-faq.txt
scripts/: generate_hair_care_csv.py  generate_product_csv.py  production_sync.ps1  production_sync.sh  render_blueprint_launch.ps1
(+25 files in other folders)
