[project]
name = "shopify-support-agent-backend"
version = "0.1.0"
description = "FastAPI backend for AI customer support agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.0",
  "shopifyapi>=11.0.0",
  "openai>=1.0.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "pgvector>=0.4.0",
  "python-jose>=3.0.0",
  "passlib[bcrypt]>=1.7.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.9"
]

[tool.poetry]
name = "shopify-support-agent-backend"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
